*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench.htm
@@ -17,13 +17,14 @@ Plugging into the workbench</H1>
 By now, you should be quite familiar with the operation of the workbench and how it uses views and editors to display information.
 If not, read the quick tour of the workbench below.</P>
 <P >
-The sections following the quick tour will look at the user interface from an API
+The sections following the quick tour will look at the workbench user interface from an API
 perspective.&nbsp; We will show how a plug-in can contribute to the workbench
 UI.</P>
 <h2>
 Quick tour of the workbench</h2>
 <P >
-The workbench is the cockpit for navigating all of the function provided by plug-ins. Using the workbench, we can navigate projects, folders, and files. We can view and edit
+The workbench is the cockpit for navigating all of the function provided by plug-ins.
+By using the workbench, we can navigate resources and we can view and edit
 the content and properties of these resources. </P>
 <P >
 When you open your workbench on a set of projects, it looks something like this.</P>
@@ -35,7 +36,9 @@ The workbench is just a frame that can present various visual parts. These parts
 <ul>
   <li>
 <b>
-Editors</b> allow the user to edit something in the workbench. Editors are &quot;document-centric,&quot; much like a file system based editor. They follow an open-save-close lifecycle much like file system based tools, but they are tightly integrated into the workbench.</li>
+Editors</b> allow the user to edit something in the workbench. Editors are &quot;document-centric,&quot; much like a file system editor.
+Like file system editors, they follow an open-save-close lifecycle.&nbsp; Unlike
+file system editors, they are tightly integrated into the workbench.</li>
   <li>
 <b>
 Views</b> provide information about some object that the user is working with in the workbench. Views often change their content as the user selects different objects in the workbench.&nbsp;
