--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext.htm
@@ -21,7 +21,7 @@ We'll see the readme tool extensions associated with wizards, preferences, prope
 <P >
 Next, we will look at some more advanced workbench extensions points that you may
 want to use.&nbsp; Since the readme tool does not contribute to all of these extension
-points, we will look also at example extensions that are implemented by the platform
+points, we will also look at example extensions that are implemented by the platform
 workbench, the platform help system, and Java tooling (JDT).</P>
 
 
