--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
@@ -21,8 +21,9 @@ org.eclipse.ui.perspectiveExtensions</H3>
 
 
 <P >The contributions that can be defined for new perspectives (action sets, wizard entries, view layout,
-view shortcuts, and perspective shortcuts) also apply when plug-ins contribute to
-an existing perspective.&nbsp; One important difference is that these items are
+view shortcuts, and perspective shortcuts) can also be supplied for
+an existing perspective.&nbsp; One important difference is that these
+contributions are
 specified in the <b>plugin.xml</b> markup instead of
 configuring them into an
  <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a>.</b>
@@ -58,16 +59,16 @@ perspective.</P>
 &lt;/extension&gt;</pre></font>
 
 
-<P >The <b>targetID</b> is the id of the perspective
-that the extension is contributing to.&nbsp; The <b>actionSet</b> parameter identifies the <b>id</b>
+<P >The <b>targetID</b> is the id of the perspective to which the plug-in is
+contributing new behavior.&nbsp; The <b>actionSet</b> parameter identifies the <b>id</b>
 of a previously declared action set that should be added to the target
-perspective.&nbsp; This is analogous to using<b>
-IPageLayout.addActionSet</b> in the&nbsp; <b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>.</P>
+perspective.&nbsp; This markup is analogous to using<b>
+IPageLayout.addActionSet</b> in the&nbsp;<b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>.</P>
 
 
 <P >Contributing a view to a perspective is a little more involved, since the
 perspective page layout information must be declared.&nbsp; The <b>visible</b>
-attribute controls whether the view is initially visible when the perspective is
+attribute controls whether the contributed view is initially visible when the perspective is
 opened.&nbsp; In addition to
 supplying the <b>id</b> of the contributed view, the id
 of a view that already exists in the perspective ( a <b>relative</b>
@@ -93,7 +94,7 @@ view that will be allocated to the new view.&nbsp;&nbsp;</li>
 <P >Specifying a <b>perspectiveShortcut</b>
 indicates that another perspective (specified by <b>id</b>)
 should be added to the <b>Window-&gt;Open Perspective... </b>menu of the target
-perspective.&nbsp; This is analogous to calling <b>IPageLayout.addPerspectiveShortcut</b>
+perspective.&nbsp; This markup is analogous to calling <b>IPageLayout.addPerspectiveShortcut</b>
 in the original perspective definition in the <b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>.&nbsp;
 Plug-ins can also add view shortcuts and new wizard shortcuts in a similar
 manner.&nbsp; See <b><a href="../reference/extension-points/org_eclipse_ui_perspectiveExtensions.html">org.eclipse.ui.perspectiveExtensions</a></b>
