--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
@@ -15,14 +15,16 @@ org.eclipse.ui.perspectives</H3>
 <P >
 We've already seen some ways the workbench allows the user to control the appearance of plug-in functionality. Views can be hidden or shown using the
 <b>Window-&gt;Show View</b> menu. Action sets can be hidden or shown using the <b>Window-&gt;Customize
-Perspective...</b> menu. These features help the user organize the clutter in the workbench at a fine grained level. </P>
+Perspective...</b> menu. These features help the user organize the workbench. </P>
 
 <H4>
 Perspectives</H4>
 <P >
 <b>
 Perspectives</b> provide an additional layer of organization inside a workbench
-window. Users can switch between perspectives as they move across tasks. A perspective defines an initial collection and layout of views that should be used when the user first switches to it. It also defines the initial visible action sets.</P>
+window. Users can switch between perspectives as they move across tasks. A perspective defines
+a collection of views, a layout for the views, and the visible action sets that
+should be used when the user first opens the perspective.</P>
 <P >
 The platform itself defines one perspective, the <b> Resource</b> perspective. Other platform plug-ins, such as
 the help system and the Java tooling, define additional perspectives. Your plug-in can define its own
@@ -55,7 +57,7 @@ perspective and its perspective page layout. </P>
 Workbench part layout</H4>
 <P >
 One of the main jobs of an <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a></b>
-is to describe the placement of the editor and views in the workbench window. Note that these layouts are different than the
+is to describe the placement of the editor and the views in the workbench window. Note that these layouts are different than the
 <a href="../reference/api/org/eclipse/swt/widgets/Layout.html"><b> Layout</b></a> class in SWT. Although
 <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a></b>
 and <a href="../reference/api/org/eclipse/swt/widgets/Layout.html"><b> Layout</b></a>
@@ -63,8 +65,8 @@ solve a similar problem (sizing and positioning widgets within a larger area), y
 perspective page layout.</P>
 <P >
 A perspective page layout is initialized with one area for displaying an editor. The perspective factory is responsible for adding additional views relative to the
-editor. Views are added to the layout in relationship (top, bottom, left, right) to another part. Placeholders (empty space) can also be added for a
-simple view or folder that is not initially shown.</P>
+editor. Views are added to the layout relative to (top, bottom, left, right) another part. Placeholders (empty space) can also be added for
+items that are not initially shown.</P>
 <P >
 To organize related views and reduce clutter, you can use <a href="../reference/api/org/eclipse/ui/IFolderLayout.html"><b>IFolderLayout</b></a> to group views into tabbed folders. For example, the Resource perspective
 places the resource navigator inside a folder at the top left corner of the
@@ -74,15 +76,14 @@ same folder as the resource navigator. If the user shows the bookmarks view, it 
 navigator, with a tab for each view.</P>
 <P >
  <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a></b>
-also allows you to define available actions and shortcuts inside a
+also allows you to define the available actions and shortcuts inside a
 perspective.&nbsp;&nbsp; </P>
 
 
 
 <ul>
   <li><b>addActionSet</b> is used to add action sets to a perspective.&nbsp;&nbsp;</li>
-  <li><b>addNewWizardShortcut</b> adds a new entry to the <b>File-&gt;New</b> menu for a perspective and
- invoke the appropriate wizard.&nbsp;&nbsp;&nbsp;</li>
+  <li><b>addNewWizardShortcut</b> adds a new entry to the <b>File-&gt;New</b> menu for a perspective.</li>
   <li><b>addShowViewShortcut</b> adds the names of
  views that should appear in the <b>Window-&gt;Show View</b>  menu when the
  perspective is active.&nbsp;&nbsp;</li>
