--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSetPartAssociations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSetPartAssociations.htm
@@ -16,16 +16,15 @@ org.eclipse.ui.actionSetPartAssociations</H3>
 Once your plug-in defines an <a href="workbench_basicext_actionSets.htm">action
 set</a>, it can use the
 <a href="../reference/extension-points/org_eclipse_ui_actionSets.html"><b> org.eclipse.ui.actionSetPartAssociations</b></a> 
-extension point specify that an action set should be made visible when a
-particular view or editor is active.&nbsp; Ultimately, the user controls the
-appearance of action sets using <b>Window-&gt;Customize Perspectives...</b> in
-the workbench menu.&nbsp; </P>
+extension point to specify that an action set should be made visible when a
+particular view or editor is active.&nbsp;&nbsp; </P>
 
 <P >
-If the user marks an action set visible, it will always be visible when the
+ Ultimately, the user controls the
+appearance of action sets using <b>Window-&gt;Customize Perspectives...</b> in
+the workbench menu.&nbsp;If the user marks an action set visible, it will always be visible when the
 perspective is active, regardless of
-the active view or editor.&nbsp; Likewise, if the user marks the action set
-hidden, it will always be hidden when the perspective is active.&nbsp; If the user does not change the state of
+the active view or editor.&nbsp; Likewise, if the user marks the action set as hidden, it will always be hidden when the perspective is active.&nbsp; If the user does not change the state of
 an action set in this dialog, then the action set part associations are used to
 determine the visibility of the action set.</P>
 
@@ -51,10 +50,9 @@ following example comes from the Java development tools (JDT) UI plug-in.</P>
 <P >The <b>targetID</b> specifies the action set.&nbsp; (The <b> CodingActionSet</b> was
 previously defined in the JDT plug-in manifest.)&nbsp; One or more <b>part</b>
 attributes can be specified to indicate which views and editors will cause the
-action set to become visible in the menus.&nbsp; The effect of this extension
+action set to become visible in the menus and toolbar.&nbsp; The effect of this extension
 contribution is that the actions associated with writing Java code will only be
-visible when any of the specified views are active, unless the user specifically
-marks the action visible or hidden in the <b>Customize Perspective</b> dialog.</P>
+visible when one of the specified views is active.</P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
