--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
@@ -17,13 +17,12 @@ The <b><a href="../reference/extension-points/org_eclipse_ui_popupMenus.html"> o
 point allows a plug-in to contribute to the popup menus of other
 views and editors.</P>
 <P >
-You can contribute an action to a specific popup menu by its id (<b>viewerContribution</b>), or you can contribute
-an action for an object
-type (<b>objectContribution</b>).&nbsp;</P>
+You can contribute an action to a specific popup menu by its id (<b>viewerContribution</b>), or
+by associating it with a particular object type (<b>objectContribution</b>).&nbsp;</P>
 <ul>
   <li>An <b>objectContribution</b> will cause the menu
-    item to appear in all popup menus for views or editors that have objects of
-    the specified type selected.</li>
+    item to appear in popup menus for views or editors where objects of
+    the specified type are selected.</li>
   <li>A <b>viewerContribution</b> will cause the menu
     item to appear in the popup menu of a view or editor specified by id in the
     markup.&nbsp;&nbsp;</li>
@@ -76,7 +75,8 @@ We can see the popup menu contribution when we select a readme file from the res
 <img border="0" src="images/readmepopupmenu.jpg" width="360" height="530">
 <h4>Viewer contribution</h4>
 <p>
-A viewer contribution is used to contribute to a specific view or editor's popup menu using its id.
+A viewer contribution is used to contribute to a specific view or editor's popup menu
+by using its id.
 Here is the readme tool's viewer contribution:</p>
 <pre><font color='#4444CC'>      ...
       &lt;viewerContribution
@@ -108,14 +108,14 @@ case, we are adding an action to one of the readme tool views, the
 outliner.&nbsp; The action itself is similar to others that we've seen.&nbsp; We specify the <b> id</b>,
 <b>label</b>, and <b>icon</b> of the action, and
 the <b>path</b> within the popup for our contribution.&nbsp; The action will be
-shown only in the readme outline view's popup.</P>
+shown only in the readme outline view's popup menu.</P>
 
 
 <P >
 <img border="0" src="images/readmeoutlinerpopup.jpg" width="262" height="94"></P>
 
 
- The interfaces required for a <b>viewerContribution</b>
+ The interfaces required to contribute a <b>viewerContribution</b>
 to the <b> popupMenus</b> extension
 point are the same as those required by the <b> viewActions</b> and <b> editorActions</b> extension points. If you want to contribute the same action to the popup menu and the local menu of a view or editor, you can use the same class for both extensions.
 
