--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
@@ -37,7 +37,9 @@ class definition.</P>
    About action - ABOUT - &quot;About&quot;
 </pre></font>
 <P >
-The standard workbench help menu consists of a named group called &quot;<b>start</b>,&quot; followed by a named group called &quot;<b>end</b>,&quot; followed by the &quot;<b>About</b>&quot; action. Why two groups? To provide some control for plug-ins for how far down they appear in the help menu. When you define a menu, you can define as many slots as you like. Adding more slots gives other plug-ins more control over where their contributions appear relative to existing contributions. </P>
+The standard workbench help menu consists of a named group called &quot;<b>start</b>,&quot; followed by a named group called &quot;<b>end</b>,&quot; followed by the &quot;<b>About</b>&quot; action.
+Defining two groups gives plug-ins more control over where their contributed
+items will be positioned within the help menu.&nbsp; When you define a menu, you can define as many slots as you like. Adding more slots gives other plug-ins more control over where their contributions appear relative to existing contributions. </P>
 <P >
 But wait!&nbsp; We know that there are other menu items on the Help menu.&nbsp;
 These are added by plug-ins.&nbsp; For example, the help plug-in adds an action
@@ -70,8 +72,11 @@ Toolbar paths work similarly. Whenever a path is specified, it must end with the
 <H4>
 Fully qualified menu and tool paths</H4>
 <P >
- A complete menu or toolbar path is simply a list of menu name and named group pairs. Menu names for the workbench are also defined in
-<b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>. This is how we knew that the fully qualified path name for our help action was &quot;<b>help/helpEnd</b>.&quot; </P>
+ A complete menu or toolbar path is simply &quot;menu name/group
+ name.&quot;&nbsp; Menu names for the workbench are defined in
+<b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>. This
+ class is used to find that the fully qualified path name for our help action is
+ &quot;<b>help/helpEnd</b>.&quot; </P>
 <P >
 Some menus have nested submenus. This is where longer paths come into play. If the help menu had defined a submenu called &quot;<b>submenu</b>&quot; with a named group called &quot;<b>submenuStart</b>,&quot; then the fully qualified menu path for an action in the new submenu would be &quot;<b>help/submenu/submenuStart</b>.&quot;</P>
 
@@ -79,9 +84,9 @@ Some menus have nested submenus. This is where longer paths come into play. If t
 <H4>
 <a name="workbench_menus_nls">
 Externalizing UI labels</a></H4>
-<p>The example above also demonstrates a technique for externalizing strings
-that appear in the UI.&nbsp; This is useful for translating the plug-in's UI to
-other languages.&nbsp; We can externalize the strings in our <b>plugin.xml
+<p>The example above demonstrates a technique for externalizing strings
+that appear in the UI.&nbsp; Externalized strings are used to make translating the plug-in's UI to
+other languages simpler.&nbsp; We can externalize the strings in our <b>plugin.xml
 </b>files by replacing the string with a key (e.g. <b>%help,
 %helpcontents</b>) and creating entries in the <b>plugin.properties</b>
 file of the form:</p>
@@ -90,7 +95,7 @@ file of the form:</p>
    helpContents = &quot;Help Contents&quot;
 </pre></font>
 <P >
-This way, the <b>plugin.properties</b> file can be
+The <b>plugin.properties</b> file can be
 translated for different languages and the <b>plugin.xml</b>
 will not need to be modified.</P>
 
