--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
@@ -43,8 +43,8 @@ The plug-in definition includes the <b>name</b>, <b>id,</b> <b>version</b>, and 
 <b>name</b> of the plug-in. We saw most of these parameters before in our hello world plug-in. The readme tool also defines a specialized plug-in class,
 <b>ReadmePlugin</b>. </P>
 <P >
-The workbench UI and resources plug-ins are listed as required plug-ins so that the platform will know that the readme tool is dependent on
-them. </P>
+The workbench UI and resources plug-ins are listed as required plug-ins, which
+informs the platform of the readme tool's dependencies. </P>
 <P >
 Finally, the name of the jar file is provided. File names specified in a <b> plugin.xml</b> file are relative to the
 plug-in's directory.</P>
