--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
@@ -14,7 +14,8 @@ Workbench under the covers
 <H2>
 Workbench under the covers</H2>
 <P >
-An extensive set of classes and interfaces is available for building complex user interfaces. Fortunately you don't need to understand them all to do something simple. We'll start by looking at some concepts that are exposed in the workbench user interface
+The workbench provides an extensive set of classes and interfaces for building complex user interfaces. Fortunately you don't need to understand
+all of them to do something simple. We'll start by looking at some concepts that are exposed in the workbench user interface
 and their corresponding structure under the covers.</P>
 
 <H3>
@@ -29,11 +30,7 @@ For the rest of this discussion, when we use the term workbench, we will be refe
 (<b><a href="../reference/api/org/eclipse/ui/IWorkbenchWindow.html">IWorkbenchWindow</a></b>). The workbench window is the top-level window in a workbench. It is the frame that holds the menu bar,
 tool bar, status line, short cut bar, and pages. In general, you don't need to program to the workbench window. You just want to know that it's there.</P>
 <i><blockquote>
-Note:&nbsp; You can open multiple workbench windows using <b>Open Perspective...
-</b>if you have set up your workbench preferences to
-open perspectives in a new window.
-<b> </b>By default, new perspectives are opened in the
-same workbench window.&nbsp; Each workbench window is a self-contained world of editors and views,
+Note:&nbsp; You can open multiple workbench windows; however each workbench window is a self-contained world of editors and views,
 so we'll just focus on a single workbench
 window.</blockquote></i>
 <P >
@@ -64,7 +61,7 @@ an editor. How do you decide this?</P>
   <li>An <b>editor</b> is typically used to edit or browse a document or input
     object.&nbsp; Modifications made in an editor follow an open-save-close
     model, much like an external file system editor.&nbsp; The platform text
-    editor and Java editor are good examples of editors.</li>
+    editor and Java editor are examples of workbench editors.</li>
 </ul>
 <P >
 In either case, you will be building your view or editor according to a common lifecycle. </P>
@@ -81,14 +78,14 @@ When the view or editor is closed, you will receive a <b> dispose</b>
  message to signify that the view or editor is being closed.&nbsp; At this point
 the controls allocated in <b>createPartControl</b>
  have already been disposed for you, but you must dispose of any graphics resources (such
-as cursors, icons, or fonts) that you allocated while creating the controls or
-responding to widget events.</li>
+as cursors, icons, or fonts) that you allocated for the view or editor.</li>
 </ul>
 <P >
 Throughout this lifecycle, events will fire from the containing workbench page to notify interested parties about the opening, activation, deactivation, and closing of the
 views and editors.</P>
 <P >
-Seem simple?&nbsp; It can be. That's the beauty of workbench views and editors. They're just widget holders, and can be as simple or complex as you need them to be. We saw the simplest of views earlier when we built a hello world view. Here it is again now that we've explained a bit better what's going on.</P>
+Seem simple?&nbsp; It can be. That's the beauty of workbench views and editors. They're just widget holders, and can be as simple or complex as you need them to be. We saw the simplest of views earlier when we built a hello world view.
+Let's look at it again now that we've explained more about what's going on.</P>
 <font color='#4444CC'><pre>
    package org.eclipse.examples.helloworld;
 
