--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerhelp.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerhelp.htm
@@ -13,10 +13,10 @@ Contributing marker help
 <BODY BGCOLOR="#ffffff">
 <h3>Contributing marker help</h3>
 <p>Now we are ready to look at how to add help to the readme tool's
-markers.&nbsp; This is done using the <b><a href="../reference/extension-points/org_eclipse_ui_markerHelp.html">org.eclipse.ui.markerHelp</a></b>
+markers.&nbsp; Adding marker help is done using the <b><a href="../reference/extension-points/org_eclipse_ui_markerHelp.html">org.eclipse.ui.markerHelp</a></b>
 extension point.&nbsp; This extension point allows plug-ins to associate a help
 context id with a particular type of marker.&nbsp; The marker can be qualified
-by type only, or further qualified by the value of one or more of its
+by marker type only, or it can be further qualified by the value of one or more of its
 attributes.&nbsp; The readme tool declares several different help contexts:</p>
 <pre><font color="#4444CC">&lt;extension point=&quot;org.eclipse.ui.markerHelp&quot;&gt; 
    &lt;markerHelp 
@@ -36,7 +36,7 @@ attributes.&nbsp; The readme tool declares several different help contexts:</p>
       &lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.department&quot; value= &quot;infra&quot;/&gt; 
    &lt;/markerHelp&gt; 
 </font>   ...</pre>
-<p>Each marker help context is supplied for the readme marker type.&nbsp;
+<p>Each marker help context is defined for the readme marker type.&nbsp;
 However, each help context is associated with a different combination of
 attribute values.&nbsp; The first marker help context will be used for markers
 whose <b>id</b> attribute is set to <b>&quot;1234&quot;</b>.&nbsp; The help
