--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerresolution.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerresolution.htm
@@ -25,7 +25,7 @@ resolution contributed for the marker.</p>
 extension point.&nbsp; This extension point allows plug-ins to associate a <b>class</b>
 that implements <b><a href="../reference/api/org/eclipse/ui/IMarkerResolutionGenerator.html">IMarkerResolutionGenerator</a></b>
 with a particular type of marker.&nbsp; The marker can be qualified
-by type only, or further qualified by the value of one or more of its
+by marker type only, or it can be further qualified by the value of one or more of its
 attributes.&nbsp; The readme tool declares several different marker resolutions:</p>
 
 
@@ -49,12 +49,12 @@ attributes.&nbsp; The readme tool declares several different marker resolutions:
 &lt;/extension&gt; </font></pre>
 
 
-<p>Each marker resolution generator is supplied for the readme marker type, but associated with a different combination of
+<p>Each marker resolution generator is defined for the readme marker type, but associated with a different combination of
 attribute values.&nbsp; The first marker resolution generator will be used for markers
 whose <b>id</b> attribute is set to <b>&quot;1234&quot;</b>.&nbsp; In this
 particular example, the readme tool uses the same marker resolution generator
 for all cases.&nbsp; This is not typical, but makes sense in a case where there
-is only one resolution available and only for specific combinations of attribute
+is only one resolution available for specific combinations of attribute
 values.</p>
 
 
@@ -76,7 +76,7 @@ implementation from <b>ReadmeMarkerResolutionGenerator</b>:</p>
 <p><img border="0" src="images/readmemarkerresolution.jpg" width="347" height="262"></p>
 
 
-<p>The <b>AddSentenceResolution</b> defines the label for the resolution and
+<p>The <b>AddSentenceResolution</b> defines the resolution's dialog label and
 implements the resolution itself.</p>
 
 
