--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
@@ -34,15 +34,19 @@ markup:</p>
 
 
 <p>The tool defines a marker that inherits from the platform's text marker and
-task marker.&nbsp; It also defines named attributes that can be set and queried
-on the marker.&nbsp; Since the new readme marker is a kind of text marker, it
-inherits the text marker attributes (character location within a line number.)</p>
+task marker.&nbsp; It also defines named attributes for the marker.&nbsp;&nbsp;
+Marker attributes can be set and queried.</p>
+
+
+<p>Since the new readme marker is a kind of text marker, it
+inherits the text marker attributes.&nbsp; The text marker attributes include
+the character location of the marker.</p>
 
 
 <p>Markers can be added to a <b>.readme</b> file using the readme editor's popup
 menu.&nbsp; (The popup menu actions are added dynamically in <b>ReadmeTextEditor.<font SIZE="2" COLOR="#000000">editorContextMenuAboutToShow(IMenuManager</font><font SIZE="2">
 </font></b><font SIZE="2" COLOR="#000000"><b>parentMenu)</b>).&nbsp; Once added,
-the markers show in the left side of the editor and in the tasks view.</font></p>
+the markers appear on the left side of the editor and in the tasks view.</font></p>
 
 
 <p><img border="0" src="images/readmemarkermenu.jpg" width="625" height="482"></p>
