--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
@@ -20,9 +20,7 @@ org.eclipse.ui.decorators</H3>
 <p>Your plug-in can use <b>decorators</b> to annotate the images for resources
 and other objects that appear in the workbench views.&nbsp; Decorators are
 useful when your plug-in adds functionality for existing resource types.&nbsp;
-Many of the standard workbench views participate in showing decorations.&nbsp;
-Decorations are ultimately controlled by the end user via the workbench <b>Label
-Decorators</b> preferences page.</p>
+Many of the standard workbench views participate in showing decorations.&nbsp;&nbsp;</p>
 
 
 <p>For example, PDE contributes decorators that allow you to distinguish between
@@ -35,7 +33,7 @@ binary and source projects.</p>
 <p>The <b>com.example.sourceProject&nbsp; </b>project is the only source project
 shown in the navigator.&nbsp; Note how all of the other binary projects show the
 binary decorator at the top left of the Java project icon.&nbsp; This decorator
-is contributed by PDE using the <a href="../reference/extension-points/org_eclipse_ui_decorators.html">org.eclipse.ui.decorators</a>
+is contributed by PDE using the <a href="../reference/extension-points/org_eclipse_ui_decorators.html"><b>org.eclipse.ui.decorators</b></a>
 extension point.</p>
 
 
@@ -55,23 +53,24 @@ extension point.</p>
 &lt;/extension&gt;</font></pre>
 
 
-<p>The <b>class </b>attribute should name a class that implements <a href="../reference/api/org/eclipse/jface/viewers/ILabelDecorator.html">ILabelDecorator</a>.&nbsp;
+<p>The <b>class </b>attribute should name a class that implements <a href="../reference/api/org/eclipse/jface/viewers/ILabelDecorator.html"><b>ILabelDecorator</b></a>.&nbsp;
 This class allows you to decorate the original label's image and text with your
 own annotations.&nbsp; The <b>label</b> and <b>description</b> attributes
 designate the text that is used to name and describe the decorator in the
-preferences dialog.&nbsp; The <b>objectClass</b> names the class of objects that
-the decorator should be applied to, with the <b>adaptable</b> flag indicating
-whether objects that adapt to the class should also be decorated.&nbsp; The
-state flag controls whether the decorator is visible by default.</p>
+preferences dialog.&nbsp; The <b>objectClass</b> names the class of objects to
+which the decorator should be applied.&nbsp; The <b>adaptable</b> flag indicates
+whether objects that adapt to the class should also be decorated.&nbsp; The <b>
+state</b> flag controls whether the decorator is visible by default.</p>
 
 
-<p>Decorators are controlled by the user via the preferences dialog.&nbsp;
+<p>Decorators are ultimately controlled by the user via the workbench <b>Label
+Decorations</b> preferences page.&nbsp;
 Individual decorators can be turned on and off.&nbsp; Even so, it is a good idea
 to design your decorators so that they do not overlap or conflict with existing
 platform SDK decorators.&nbsp; If your decorators include information that is
 expensive to compute or potentially distracting, you may want to contribute your
 own preferences that allow the user to further fine-tune the decorator once it
-is on.&nbsp; This is done by the CVS client.</p>
+is on.&nbsp; This technique is used by the CVS client.</p>
 
 
 <p><img border="0" src="images/cvsdecorators.jpg" width="508" height="454"></p>
