--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
@@ -15,7 +15,9 @@
 <H3>
 org.eclipse.ui.resourceFilters</H3>
 <P >
-The resource filters extension allows plug-ins to define filters that are useful for filtering out file types in the resource navigator view. This is useful when special file types are used to represent internal plug-in information that should not be shown in the workbench or manipulated by the user.</P>
+The resource filters extension allows plug-ins to define filters that are useful for filtering out file types in the resource navigator view. This
+extension is useful when special file types are used to represent internal plug-in information
+but you do not want the files to be shown in the workbench or manipulated by the user.</P>
 <P >
 The workbench filters out the pattern &quot;<b>.*</b>&quot; to exclude internal files such as .metadata from the resource navigator. Likewise, the JDT plug-in filters out &quot;<b>*.class</b>&quot; files to hide compiled classes.</P>
 <P >
@@ -40,7 +42,7 @@ pull-down menu.</P>
 <P >In addition to declaring the <b>filter pattern</b>,
 the plug-in can use the <b>selected</b> attribute to
 specify whether the filter should be enabled in the resource navigator.&nbsp;
-This only determines the initial state of the filter pattern.&nbsp; The user can
+This attribute only determines the initial state of the filter pattern.&nbsp; The user can
 control which filter patterns are active.</P>
 
 
